Fix controls clipping out

--- a/app/components/pages/editor/layouts/Layouts.m.less
+++ b/app/components/pages/editor/layouts/Layouts.m.less
@@ -24,6 +24,7 @@
   height: 100%;
   position: relative;
   padding-bottom: 8px;
+  min-width: 0;
 
   > div {
     height: 100%;
